2006-04-02  Johan Dahlin  <johan@gnome.org>

	* gtk/gtkmodule.c (init_gtk): GDK_PARENT_RELATIVE constant

	* gtk/gtk-types.c (pygtk_style_helper_setitem): Add support for
	GDK_PARENT_RELATIVE in style pixmaps.

	Fixes #320248 (Nikos Kouremenos)

2006-04-01  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* codegen/override.py (Overrides.__parse_override): Check and
	abort if a function is being overridden more than once.

2006-04-01  Rauli Ruohonen  <raulir@iki.fi>

	* codegen/codegen.py (Wrapper.write_functions): Add missing 'data'
	parameter when calling self.write_function.

	* pangocairo.override: Wrap pango_cairo_context_set_font_options
	and pango_cairo_context_get_font_options.  Fixes #328108.

	Reviewed by Gustavo Carneiro.

2006-04-01  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* codegen/codegen.py (Wrapper.write_virtuals): Use
	PyObject_GetAttrString, not PyDict_GetItemString, fixes #327715.

	* gtk/pygtk.h, gtk/gtkmodule.c: Export pygtk_tree_path_to_pyobject
	and pygtk_tree_path_from_pyobject as public APIs.  Fixes #318021.

	* codegen/argtypes.py: Add suppport for const object args.
	Patch by wollny@cbs.mpg.de, plus some additional changes for code
	style improvements and a bug fix.

	* gtk/gtkmodule.c (_pygtk_log_func): Call g_log_default_handler
	when python isn't initialized.  Fixes #334188.

	* examples/Makefile.am (EXTRA_DIST): Ship new editable interface example.

	* examples/gobject/editable-interface.py: Add small example of
	overriding GtkEditable interface method and chaining to parent.

	* codegen/codegen.py: Bug 334986: "Make it possible to
	re-implement interfaces and chain to parent impl."

2006-04-01  Johan Dahlin  <johan@gnome.org>

	* codegen/h2def.py (proto_pat): Allow whitespace before
	last parenthesis. Fixes #317124

2006-04-01  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gtk/gtk.defs (GtkSpinButton.input, GtkEditable.do_insert_text) 
	(GtkEditable.get_selection_bounds,