@@ -1,4 +1,12 @@
+2006-04-02  Ben Caradoc-Davies  <ben@wintersun.org>
+
+	reviewed by: Johan
+
+	* examples/pygtk-demo/demos/pixbufs.py: Remove
+	discontinuous motion, fixes #327931
+
 2006-04-02  Johan Dahlin  <johan@gnome.org>
+
 
 	* gtk/gtkmodule.c (init_gtk): GDK_PARENT_RELATIVE constant
 
